; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refdb_fs.c_packed_write.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refdb_fs.c_packed_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32* }
%struct.packref = type { i32 }

@GIT_FILEBUF_INIT = common dso_local global i32 0, align 4
@GIT_FILEBUF_FSYNC = common dso_local global i32 0, align 4
@GIT_PACKEDREFS_FILE_MODE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@GIT_PACKEDREFS_HEADER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*)* @packed_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @packed_write(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca %struct.packref*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %4, align 8
  %13 = load i32, i32* @GIT_FILEBUF_INIT, align 4
  store i32 %13, i32* %5, align 4
  store i32 0, i32* %7, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @git_sortedcache_wlock(i32* %14)
  store i32 %15, i32* %6, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %1
  %18 = load i32, i32* %6, align 4
  store i32 %18, i32* %2, align 4
  br label %84

19:                                               ; preds = %1
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %19
  %25 = load i32, i32* @GIT_FILEBUF_FSYNC, align 4
  store i32 %25, i32* %7, align 4
  br label %26

26:                                               ; preds = %24, %19
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @git_sortedcache_path(i32* %27)
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* @GIT_PACKEDREFS_FILE_MODE, align 4
  %31 = call i32 @git_filebuf_open(i32* %5, i32 %28, i32 %29, i32 %30)
  store i32 %31, i32* %6, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %26
  br label %79

34:                                               ; preds = %26
  %35 = load i32, i32* @GIT_PACKEDREFS_HEADER, align 4
  %36 = call i32 @git_filebuf_printf(i32* %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %35)
  store i32 %36, i32* %6, align 4
  %37 = icmp slt i32 %36, 0
  br i1 %37, label %38, label %39

38:                                               ; preds = %34
  br label %79

39:                                               ; preds = %34
  store i64 0, i64* %8, align 8
  br label %40

40:                                               ; preds = %62, %39
  %41 = load i64, i64* %8, align 8
  %42 = load i32*, i32** %4, align 8
  %43 = call i64 @git_sortedcache_entrycount(i32* %42)
  %44 = icmp ult i64 %41, %43
  br i1 %44, label %45, label %65

45:                                               ; preds = %40
  %46 = load i32*, i32** %4, align 8
  %47 = load i64, i64* %8, align 8
  %48 = call %struct.packref* @git_sortedcache_entry(i32* %46, i64 %47)
  store %struct.packref* %48, %struct.packref** %9, align 8
  %49 = load %struct.packref*, %struct.packref** %9, align 8
  %50 = call i32 @assert(%struct.packref* %49)
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %52 = load %struct.packref*, %struct.packref** %9, align 8
  %53 = call i32 @packed_find_peel(%struct.TYPE_5__* %51, %struct.packref* %52)
  store i32 %53, i32* %6, align 4
  %54 = icmp slt i32 %53, 0
  br i1 %54, label %55, label %56

55:                                               ; preds = %45
  br label %79

56:                                               ; preds = %45
  %57 = load %struct.packref*, %struct.packref** %9, align 8
  %58 = call i32 @packed_write_ref(%struct.packref* %57, i32* %5)
  store i32 %58, i32* %6, align 4
  %59 = icmp slt i32 %58, 0
  br i1 %59, label %60, label %61

60:                                               ; preds = %56
  br label %79

61:                                               ; preds = %56
  br label %62

62:                                               ; preds = %61
  %63 = load i64, i64* %8, align 8
  %64 = add i64 %63, 1
  store i64 %64, i64* %8, align 8
  br label %40

65:                                               ; preds = %40
  %66 = call i32 @git_filebuf_commit(i32* %5)
  store i32 %66, i32* %6, align 4
  %67 = icmp slt i32 %66, 0
  br i1 %67, label %68, label %69

68:                                               ; preds = %65
  br label %79

69:                                               ; preds = %65
  %70 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %71 = call i32 @packed_remove_loose(%struct.TYPE_5__* %70)
  store i32 %71, i32* %6, align 4
  %72 = icmp slt i32 %71, 0
  br i1 %72, label %73, label %74

73:                                               ; preds = %69
  br label %79

74:                                               ; preds = %69
  %75 = load i32*, i32** %4, align 8
  %76 = call i32 @git_sortedcache_updated(i32* %75)
  %77 = load i32*, i32** %4, align 8
  %78 = call i32 @git_sortedcache_wunlock(i32* %77)
  store i32 0, i32* %2, align 4
  br label %84

79:                                               ; preds = %73, %68, %60, %55, %38, %33
  %80 = call i32 @git_filebuf_cleanup(i32* %5)
  %81 = load i32*, i32** %4, align 8
  %82 = call i32 @git_sortedcache_wunlock(i32* %81)
  %83 = load i32, i32* %6, align 4
  store i32 %83, i32* %2, align 4
  br label %84

84:                                               ; preds = %79, %74, %17
  %85 = load i32, i32* %2, align 4
  ret i32 %85
}

declare dso_local i32 @git_sortedcache_wlock(i32*) #1

declare dso_local i32 @git_filebuf_open(i32*, i32, i32, i32) #1

declare dso_local i32 @git_sortedcache_path(i32*) #1

declare dso_local i32 @git_filebuf_printf(i32*, i8*, i32) #1

declare dso_local i64 @git_sortedcache_entrycount(i32*) #1

declare dso_local %struct.packref* @git_sortedcache_entry(i32*, i64) #1

declare dso_local i32 @assert(%struct.packref*) #1

declare dso_local i32 @packed_find_peel(%struct.TYPE_5__*, %struct.packref*) #1

declare dso_local i32 @packed_write_ref(%struct.packref*, i32*) #1

declare dso_local i32 @git_filebuf_commit(i32*) #1

declare dso_local i32 @packed_remove_loose(%struct.TYPE_5__*) #1

declare dso_local i32 @git_sortedcache_updated(i32*) #1

declare dso_local i32 @git_sortedcache_wunlock(i32*) #1

declare dso_local i32 @git_filebuf_cleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
